--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -77,7 +77,7 @@
 
 \begin{activity}{10}
   Let \(V=\setBuilder{(a,b)}{a,b\in\IR}\), where
-  \(\begin{bmatrix} a_1 \\ a_2 \end{bmatrix})\oplus \begin{bmatrix}b_1 \\ b_2\end{bmatrix}=
+  \(\begin{bmatrix} a_1 \\ a_2 \end{bmatrix}\oplus \begin{bmatrix}b_1 \\ b_2\end{bmatrix}=
   \begin{bmatrix}a_1+b_1+a_2+b_2 \\ a_1^2+b_1^2\end{bmatrix}\) and \(c\odot \begin{bmatrix} a_1 \\ a_2\end{bmatrix}=\begin{bmatrix} a_1^c \\ a_2+c\end{bmatrix}\). Show that
   this is not a vector space by finding a counterexample
   that does not satisfy one of the vector space properties.
@@ -103,7 +103,7 @@
   \[
     \vspan\{\vect v_1,\vect v_2,\dots,\vect v_m\} =
     \setBuilder{c_1\vect v_1+c_2\vect v_2+\dots+c_m\vect v_m}{ 
-    c_i\text{ is a real number}}
+    c_i\text{ is a real number}}.
   \]
 \end{definition}
 
