--- a/tex/modules/2-V/sections/3.tex
+++ b/tex/modules/2-V/sections/3.tex
@@ -50,8 +50,8 @@
   \end{center}
 \end{fact}
 
-\begin{activity}{10}
-  Choose a vector \(\begin{bmatrix}a\\b\\c\end{bmatrix}\)
+\begin{activity}{15}
+  Find a vector \(\begin{bmatrix}a\\b\\c\end{bmatrix}\)
   in \(\IR^3\) that is not in
   \(\vspan\left\{\begin{bmatrix}1\\-1\\0\end{bmatrix},
   \begin{bmatrix}-2\\0\\1\end{bmatrix}\right\}\) by ensuring
@@ -66,7 +66,8 @@
   \[\begin{bmatrix}[cc]1&-2\\-1&0\\0&1\end{bmatrix}\sim
   \begin{bmatrix}[cc]1&0\\0&1\\0&0\end{bmatrix}\Rightarrow
   \begin{bmatrix}[cc|c]1&-2&a\\-1&0&b\\0&1&c\end{bmatrix}\sim
-  \begin{bmatrix}[cc|c]1&0&0\\0&1&0\\0&0&1\end{bmatrix}\]
+  \begin{bmatrix}[cc|c]1&0&0\\0&1&0\\0&0&1\end{bmatrix}
+  \text{for some choice of vector} \begin{bmatrix} a \\ b \\ c \end{bmatrix} \]
 \end{fact}
 
 \begin{activity}{5}
@@ -100,6 +101,25 @@
   % \begin{subactivity}
   % Find a vector in \(\IR^4\) that is not in \(\vspan S\).
   % \end{subactivity}
+\end{activity}
+
+\begin{activity}{10}
+Consider the set of matrices
+\[ S = \left\{
+		\begin{bmatrix} 1 & 3 \\ 0 & 1 \end{bmatrix},
+		\begin{bmatrix} 1 & -1 \\ 1 & 0 \end{bmatrix},
+		\begin{bmatrix} 1 & 0 \\ 0 & 2 \end{bmatrix}
+		\right\} \]
+Does \(M_{2,2} = \vspan S\)?
+\end{activity}
+
+\begin{activity}{10}
+Let \(\vec{v}_1, \vec{v}_2, \vec{v}_3 \in \IR^7\) be three vectors, and suppose \(\vec{w}\) is another vector with \(\vec{w} \in \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\}\).  What can you conclude about \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \) ?
+\begin{enumerate}[(A)]
+\item \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \) is larger than \( \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \).
+\item \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\}  = \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \).
+\item \( \vspan \left\{ \vec{w}, \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \) is smaller than \( \vspan \left\{ \vec{v}_1, \vec{v}_2, \vec{v}_3 \right\} \).
+\end{enumerate}
 \end{activity}
 
 \end{applicationActivities}
