--- a/tex/modules/2-V/sections/4.tex
+++ b/tex/modules/2-V/sections/4.tex
@@ -74,10 +74,7 @@ Determine if this is a subspace of \(\IR^2\) or not.
 \begin{activity}{5}
   Show that the set of \(2\times 2\) matrices
   \[S=
-    \left\{
-    \begin{bmatrix}a&b\\-b&-a\end{bmatrix} :
-    a,b\text{ are real numbers}
-    \right\}
+    \setBuilder{ \begin{bmatrix}a&b\\-b&-a\end{bmatrix}}{a,b\text{ are real numbers}}
   \]
   is a subspace of \(\IR^{2\times 2}\) .
 \end{activity}
