--- a/tex/modules/2-V/sections/2.tex
+++ b/tex/modules/2-V/sections/2.tex
@@ -20,7 +20,7 @@
   \end{subactivity}
 
   \begin{subactivity}
-    Solve this system. (Remember, you should use a calculator to help
+    Solve this system. (Remember, you should use CoCalc to help
     find \(\RREF\).)
 
   \end{subactivity}
@@ -63,23 +63,18 @@
 \end{activity}
 
 
-\begin{observation}
-  So far we've only discussed linear combinations of Euclidean vectors.
-  Fortunately, many vector spaces of interest can be reinterpreted as an
-  \term{isomorphic} Euclidean space \(\IR^n\); that is, a Euclidean space
-  that mirrors the behavior of the vector space exactly.
-\end{observation}
-
-\begin{activity}{5}
-  We previously checked that \(\begin{bmatrix}3\\-2\\1 \\ 5\end{bmatrix}\)
-  does not belong to
-  \(\vspan\left\{\begin{bmatrix}1\\0\\-3 \\ 2\end{bmatrix},
-  \begin{bmatrix}-1\\-3\\2 \\ 2\end{bmatrix}\right\}\).
-  Does \(f(x)=3x^3-2x^2+x+5\) belong to
-  \(\vspan\{x^3-3x+2,-x^3-3x^2+2+2x+2\}\)?
+\begin{activity}{10}
+  Does \(f(y)=3y^3-2y^2+y+5\) belong to
+  \(\vspan\{y^3-3y+2,-y^3-3y^2+2y+2\}\)?
+  \begin{subactivity}
+  	Reinterpret this question as a system of linear equations.
+  \end{subactivity}
+  \begin{subactivity} 
+	Solve this system to answer the original question.
+  \end{subactivity}
 \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{5}
   Does the matrix \(\begin{bmatrix}3&-2\\1&5\end{bmatrix}\) belong to
   \(\vspan\left\{\begin{bmatrix}1&0\\-3&2\end{bmatrix},
   \begin{bmatrix}-1&-3\\2&2\end{bmatrix}\right\}\)?
