small tweaks to V.0, add handout

--- a/tex/handouts/1-E/handout-E-readiness.tex
+++ b/tex/handouts/1-E/handout-E-readiness.tex
@@ -3,6 +3,8 @@
 \usepackage{course-notes}
 
 \begin{document}
+\begin{module}{E}{Solving Systems of Linear Equations}
 \input{modules/1-E/readiness/outcomes.tex}
 \input{modules/1-E/readiness/resources.tex}
+\end{module}
 \end{document}
