--- a/tex/homework.tex
+++ b/tex/homework.tex
@@ -37,29 +37,29 @@ For each standard, I list in \closeExamples{bold} practice problems that will mo
   \standards{V5:} \S 4.1
     \closeExamples{1-16},
     \otherExamples{17-20}
-    | \S 7.1
-    \otherExamples{13-16},
-    \otherExamples{18-25}
+    % | \S 7.1
+    % \otherExamples{13-16},
+    % \otherExamples{18-25}
 
   \standards{S1:} \S 2.3
     \closeExamples{1-12},
     \otherExamples{19-28}
-    | \S 7.2
-    \otherExamples{17-26}
+    % | \S 7.2
+    % \otherExamples{17-26}
 
   \standards{S2:}
     \closeExamples{\textbf{V3} and \textbf{S1} exercises}
     | \S 4.2
     \otherExamples{1-4},
     \otherExamples{23-28}
-    | \S 7.3
-    \otherExamples{1-12}
+    % | \S 7.3
+    % \otherExamples{1-12}
 
   \standards{S3,S4:} \S 4.2
     \closeExamples{5-16},
     \otherExamples{17-22}
-    | \S 7.3
-    \otherExamples{13-15,18}
+    % | \S 7.3
+    % \otherExamples{13-15,18}
 
    \standards{S5:} \S 7.1 \closeExamples{13-32} | \S 7.2 \closeExamples{1-26} | \S 7.3 \closeExamples{7-20,25-26}
 
