--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -1,5 +1,5 @@
-
-
+%!TEX root =../../../course-notes.tex
+% ^ leave for LaTeXTools build functionality
 
 \begin{applicationActivities}
 
@@ -61,17 +61,16 @@ Euclidean vectors/scalars \(\vect u,\vect v,\vect w\) of that dimension.
 \end{activity}
 
 \begin{definition}
-  A \textbf{vector space} \(V\) is any collection of mathematical objects with
+  A \term{vector space} \(V\) is any collection of mathematical objects with
   associated addition and scalar multiplication operations that satisfy
   the following properties. Let \(\vect u,\vect v,\vect w\) belong to \(V\),
   and let \(a,b\) be scalar numbers.
 
   \vectorSpaceProperties
-\end{definition}
 
-\begin{definition}
-  The most important examples of vector spaces are the \term{Euclidean
-  vector spaces} \(\IR^n\), but there are other examples as well.
+  Any \term{Euclidean vector space} \(\IR^n\) satisfies all eight
+  requirements regardless of the value of \(n\),
+  but we will also study other types of vector spaces.
 \end{definition}
 
 
