fold subsections of other modules

--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -1,6 +1,6 @@
 \usepackage{tbil-la}
 
-\usetheme{Hannover}
+\usetheme[hideothersubsections]{Hannover}
 \usecolortheme{rose}
 %Center frame titles
 \setbeamertemplate{frametitle}[default][center]
