Tweak answer choices on RAT-2-V to use set builder notation

--- a/tex/modules/2-V/readiness/test.tex
+++ b/tex/modules/2-V/readiness/test.tex
@@ -254,81 +254,60 @@
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
-  \item Solve the following system of linear equations.
+  \item What is the solution set of the following system of linear equations?
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
      x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,=\,& 1 \\
    -3x_1 &\,+\,& 4x_2 &\,+\,& x_3 &\,=\,& -7 \\
   \end{alignat*}
 
-  \begin{multicols}{2}
+  \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
+          \left\{ \begin{bmatrix}
             1 \\ -6 \\ 1
-          \end{bmatrix}
+          \end{bmatrix} \right\}
         \)
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
+          \left\{ \begin{bmatrix}
             2 \\ 0 \\ -1
-          \end{bmatrix}
+          \end{bmatrix} \right\}
         \) % correct
   \item \(
+          \setBuilder{ 
           \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
-            1 \\ -2 \\ 1
-          \end{bmatrix}+
-          a
-          \begin{bmatrix}
-            1 \\ 0 \\ 3
-          \end{bmatrix}
-        \) for all real numbers \(a\)
-  \item No solutions
+            1 +a\\ -2 \\ 1+3a
+          \end{bmatrix}}{a \in \IR}
+        \) 
+  \item \(\emptyset \) (i.e. the system is inconsistent).
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
-  \item Solve the following system of linear equations.
+  \item What is the solution set of the following system of linear equations?
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
      x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,=\,& 0 \\
   \end{alignat*}
 
-  \begin{multicols}{2}
+  \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
+          \left\{ \begin{bmatrix}
             4 \\ 1 \\ -5
-          \end{bmatrix}
+          \end{bmatrix} \right\}
         \)
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
+          \left\{\begin{bmatrix}
             1 \\ 2 \\ -1
-          \end{bmatrix}
+          \end{bmatrix}\right\}
         \)
   \item \(
+         \setBuilder{ 
           \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          a
-          \begin{bmatrix}
-            -3 \\ 2 \\ 1
-          \end{bmatrix}
-        \) for all real numbers \(a\) % correct
-  \item No solutions
+            -3a \\ 2a \\ a
+          \end{bmatrix}}{a \in \IR}
+        \)  % correct
+  \item \(\emptyset \) (i.e. the system is inconsistent).
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
