--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -40,7 +40,7 @@
   \end{subactivity}
   \begin{subactivity}%optional
   Show that $V$ contains an additive identy element, i.e. there is an element \(\vect{z} \in V\) 
-  such that for any \(\vect{v}\in V\), \(\vect{v}+\vect{z}=\vect{v}\)
+  such that for any \(\vect{v}\in V\), \(\vect{v}\oplus\vect{z}=\vect{v}\)
   \end{subactivity}
 \end{activity}
 
@@ -110,8 +110,7 @@
 
   \begin{subactivity}
     Show that the addition identity property fails by
-    showing that \((0,-1)\oplus\vec z=(0,-1)\oplus(z_1,z_2)\)
-    can never equal \((0,-1)\).
+    showing that there is no vector \(\vect{z}=(z_1,z_2)\) for which \((0,-1)\oplus\vec z=(0,-1)\).
   \end{subactivity}
 
   \begin{subactivity}
